--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
     <a href="https://www.linkedin.com/in/pavanlokesh/"><img src="linkedin.png" alt="linkedin"></a>
     <a href="mailto:pavanlokesh755@gmail.com"><img src="gmail.png" alt="gmail"></a>
     <a href="https://github.com/Pavan-lokesh11"><img src="github.png" alt="github"></a>
-    <a href="https://www.hackerrank.com/CSE_19JR1A05I8"><img src="hackrank.png" alt="hackerank"></a>
+    <a href="https://www.hackerrank.com/CSE_19JR1A05I0" target="_blank"><img src="hackrank.png" alt="hackerank"></a>
   </footer> 
 </body>
 </html>
